--- a/css/graph.css
+++ b/css/graph.css
@@ -1,11 +1,27 @@
 body {
   margin: 0;
 }
+
 svg {
   position: absolute;
   width: 100%;
   height: 100%;
 }
+circle.dot {
+  cursor: pointer;
+}
+
+#loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 2em;
+  margin-top: 2em;
+  z-index: 1000;
+}
+
+/* This is the changeset tooltip, that appear when hovering circles */
 div.tooltip {  
   position: absolute;
   text-align: center;
@@ -18,15 +34,38 @@ div.tooltip {
   border-radius: 8px;
   pointer-events: none;
 }
-#loading {
-  position: absolute;      
-  width: 100%;
-  height: 100%;
-  text-align: center;      
-  font-size: 2em;
-  margin-top: 2em;
-  z-index: 1000;
+div.push-id {
+  color: #666;
+  font-size: 10px;
 }
-circle.dot {
-  cursor: pointer;
+
+/* This is the flagging form, appearing when right clicking on circls */
+div.form {
+  position: absolute;
+  text-align: center;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+}
+div.form div {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+}
+div.form span {
+  text-align: left;
+  line-height: 30px;
+}
+div.form label {
+  padding-right: 5px;
+  text-align: right;
+  line-height: 30px;
+  font-weight: bold;
+}
+div.form input[type="text"] {
+}
+div.form input[type="submit"] {
+  grid-column: 1 / 3;
+  grid-row: 4;
 }
